Sat Jan 16 16:47:14 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/openssl/lib/openssl/pkey.rb: Added 2048 bit DH parameter.
	* test/openssl/test_pkey_dh.rb: ditto.

Sat Jan 16 10:51:19 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* enc/unicode.c: fix implicit conversion error with clang. fixup r53548.
	* string.c: ditto.

Sat Jan 16 10:31:00 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* common.mk: test-sample was changed to test-basic.
	  [Feature #11982][ruby-core:72823]
	* basictest/runner.rb: ditto. rename from tool/rubytest.rb.
	* basictest/test.rb: ditto. rename from sample/test.rb.
	* defs/gmake.mk: picked from r53540
	* sample/test.rb: backword compatibility for chkbuild.

Sat Jan 16 10:23:23 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c, enc/unicode.c: New code path as a preparation for Unicode-wide
	  case mapping. The code path is currently guarded by the :lithuanian
	  option to avoid accidental problems in daily use.
	* test/ruby/enc/test_case_mapping.rb: Test for above.
	* string.c: function 'check_case_options': fixed logical errors

Fri Jan 15 20:20:20 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* regint.h (PLATFORM_UNALIGNED_WORD_ACCESS): The value of
	  UNALIGNED_WORD_ACCESS should be used to determine whether
	  unaligned word access is allowed or not. After this commit,
	  ./configure CPPFLAGS="-DUNALIGNED_WORD_ACCESS=0" disables
	  unaligned word access even on platforms that support the feature.

Fri Jan 15 16:12:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (string1): reset heredoc indent for each string literal
	  so that concatenated string would not be dedented.
	  [ruby-core:72857] [Bug #11990]

Thu Jan 14 20:01:00 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#to_s): change encoding to
	  UTF-8 as Ruby 2.2/ by Koichi ITO <koic.ito@gmail.com>
	  https://github.com/ruby/ruby/pull/1188 fix GH-1188

Thu Jan 14 17:36:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
